Closed Bug 1728580 Opened 4 years ago Closed 4 years ago

If Firefox was dragged to the Dock from DMG, subsequent installation from DMG results in second Dock icon

Categories

(Toolkit :: Startup and Profile System, defect)

All
macOS
defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: spohl, Assigned: spohl)

References

Details

Attachments

(1 file)

If Firefox was dragged from the DMG straight to the Dock and the user subsequently chooses to install Firefox to /Applications using our prompt from bug 516362, the installation will result in a second Firefox icon being pinned right next to the first, user-created one. The first icon will continue to point to Firefox inside the DMG. The second one will point to Firefox in /Applications.

STR:

  1. Download Nightly.
  2. Open the .dmg
  3. Drag "Firefox Nightly" to the Dock.
  4. Double click the "Firefox Nightly" icon in the .dmg folder, or click the icon in the Dock.
  5. When the "Install Firefox" dialog appears, select "Install"

Expected results:
There should only be one icon in the Dock, pointing to the newly installed Firefox .app bundle in /Applications.

Actual results:
Two icons in the Dock. The first one pointing to Firefox inside the DMG. The second one pointing to Firefox in /Applications.

Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Pushed by spohl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d28a7b6edac6 Support replacing of an existing Dock icon during pinning on macOS if the first icon is pointing to an app inside a DMG. r=mstange
Pushed by spohl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1888810107ca Support replacing of an existing Dock icon during pinning on macOS if the first icon is pointing to an app inside a DMG. r=mstange
Flags: needinfo?(spohl.mozilla.bugs)
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: