Bug 1728580: Support replacing of an existing Dock icon during pinning on macOS if the first icon is pointing to an app inside a DMG. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D124209